--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "mongoose": "^6.6.7",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3"
+  },
+    "engines": {
+    "npm": "8.3.1",
+    "node": "16.14.0"
   }
 }
